--- a/source/index.html
+++ b/source/index.html
@@ -164,30 +164,66 @@
         <button class="slider__toggle" type="button">2</button>
         <button class="slider__toggle" type="button">3</button>
       </p>
+
+      <section class="information">
+        <h2 class="visually-hidden">Наши контакты</h2>
+        <p class="information__title">Остались вопросы? Свяжитесь с нами</p>
+        <ul class="information__list contacts">
+          <li class="contacts__item">
+            <h3 class="contacts__title">Звоните:</h3>
+            <a class="contacts__info" href="tel:+7 (812) 555-66-66">
+              +7 (812) 555-66-66
+            </a>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__title">Пишите:</h3>
+            <a class="contacts__info" href="mailto:mail@htmlacademy.ru">
+              mail@htmlacademy.ru
+            </a>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__title">Приезжайте в гости</h3>
+            <p class="contacts__info">ул. Большая Конюшенная, 19/8</p>
+          </li>
+        </ul>
+        <div class="contacts__map"></div>
+      </section>
     </main>
 
     <footer class="page-footer">
-      <h2 class="visually-hidden">Наши контакты</h2>
-      <p class="page-footer__title">Остались вопросы? Свяжитесь с нами</p>
-      <ul class="page-footer__list contacts">
-        <li class="contacts__item">
-          <h3 class="contacts__title">Звоните:</h3>
-          <a class="contacts__info" href="tel:+7 (812) 555-66-66">
-            +7 (812) 555-66-66
+      <a class="page-footer__logo" href="#">
+        <img class="page-footer__logo-image" src="img/logotype-blue-tablet.svg"
+        width="147" height="40" alt="Логотип приложения Pink">
+      </a>
+
+      <ul class="page-footer__list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link" href="#">
+            <img class="social-list__img" src="img/twitter.svg" width="18"
+            height="14" alt="Twitter">
           </a>
         </li>
-        <li class="contacts__item">
-          <h3 class="contacts__title">Пишите:</h3>
-          <a class="contacts__info" href="mailto:mail@htmlacademy.ru">
-            mail@htmlacademy.ru
+        <li class="social-list__item">
+          <a class="social-list__link" href="#">
+            <img class="social-list__img" src="img/facebook.svg" width="9"
+            height="18" alt="Facebook">
           </a>
         </li>
-        <li class="contacts__item">
-          <h3 class="contacts__title">Приезжайте в гости</h3>
-          <p class="contacts__info">ул. Большая Конюшенная, 19/8</p>
+        <li class="social-list__item">
+          <a class="social-list__link" href="#">
+            <img class="social-list__img" src="img/youtube.svg" width="15"
+            height="13" alt="YouTube">
+          </a>
         </li>
       </ul>
-      <div class="contacts__map"></div>
+
+      <div class="page-footer__unit unit-copyright">
+        <p class="unit-copyright__title">Разработано</p>
+        <a class="unit-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <img class="unit-copyright__img" src="img/htmlacademy.svg" width="27"
+          height="34" alt="HtmlAcademy">
+        </a>
+      </div>
     </footer>
   </body>
 </html>
