--- a/source/form.html
+++ b/source/form.html
@@ -33,14 +33,16 @@
     </header>
 
     <main class="page-form">
-      <h1 class="page-form__title">Конкурс на самое безбашенное путешествие
-        с Пинк</h1>
+      <section class="form-contest">
+        <h1 class="form-contest__title">Конкурс на самое безбашенное путешествие
+          с Пинк</h1>
+          <p class="form-contest__description">Поделитесь своей историей и
+            получите шанс выиграть ценный приз — 1000 миль на вашу бонусную
+            карту! Пожалуйста, заполните форму ниже:</p>
+      </section>
 
       <section class="form-section">
         <h2 class="visually-hidden">Форма для заполнения</h2>
-        <p class="form-section__description">Поделитесь своей историей и
-          получите шанс выиграть ценный приз — 1000 миль на вашу бонусную
-          карту! Пожалуйста, заполните форму ниже:</p>
         <form class="form-section__form form" action="https://echo.htmlacademy.ru"
         method="get">
 
@@ -177,5 +179,21 @@
         </a>
       </div>
     </footer>
+
+    <section class="modal">
+      <h2 class="visually-hidden">Уведомления</h2>
+      <article class="modal__item check">
+        <h3 class="check__title">Что-то пошло не так!</h3>
+          <p class="check__description">Проверьте поля, выделенные красным,
+            скорее всего вы забыли их заполнить</p>
+            <button class="check__button" type="button">Ок</button>
+      </article>
+      <article class="modal__item send">
+        <h3 class="send__title">Ваша заявка отправлена</h3>
+          <p class="send__description">Спасибо за ваше участие, ваша заявка уже
+            поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+            <button class="send__button" type="button">Закрыть окно</button>
+      </article>
+    </section>
   </body>
 </html>
