--- a/source/form.html
+++ b/source/form.html
@@ -11,31 +11,31 @@
         src="img/logotype-white-mobile.svg"
         width="75" height="22" alt="Пинк">
       </a>
-      <button class="main-nav__toggle" type="button">
+      <button class="page-header__toggle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
-            <a class="site-list__link">Главная</a>
+            <a class="site-list__link" href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="photo.html">Фотографии</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Конкурсы</a>
+            <a class="site-list__link">Конкурсы</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">HTML Academy</a>
           </li>
         </ul>
       </nav>
+      <h1 class="page-header__title">Конкурс на самое безбашенное путешествие
+        с Пинк</h1>
     </header>
 
     <main class="page-form">
       <section class="form-contest">
-        <h1 class="form-contest__title">Конкурс на самое безбашенное путешествие
-          с Пинк</h1>
           <p class="form-contest__description">Поделитесь своей историей и
             получите шанс выиграть ценный приз — 1000 миль на вашу бонусную
             карту! Пожалуйста, заполните форму ниже:</p>
@@ -44,18 +44,18 @@
       <section class="form-section">
         <h2 class="visually-hidden">Форма для заполнения</h2>
         <form class="form-section__form form" action="https://echo.htmlacademy.ru"
-        method="get">
+        method="post">
 
           <fieldset class="form__item form-personal">
             <p class="form-personal__item">
               <label class="form-personal__label" for="surname">Фамилия:</label>
               <input class="form-personal__text" type="text" id="surname"
-              name="surname" placeholder="Укажите фамилию*" required>
+              name="surname" placeholder="Укажите фамилию *" required>
             </p>
             <p class="form-personal__item">
               <label class="form-personal__label" for="name">Имя:</label>
               <input class="form-personal__text" type="text" id="name"
-              name="name" placeholder="Введите ваше имя*" required>
+              name="name" placeholder="Введите ваше имя *" required>
             </p>
             <p class="form-personal__item">
               <label class="form-personal__label" for="patronymic">Отчество:</label>
@@ -112,7 +112,7 @@
               <p class="form-contacts__item">
                 <label class="form-contactsl__label" for="email">Адрес почты</label>
                 <input class="form-contacts__text" type="text" id="email"
-                name="email" placeholder="Введите почту*" required>
+                name="email" placeholder="Введите почту *" required>
               </p>
             </fieldset>
 
@@ -138,7 +138,7 @@
                 id="comment-text" placeholder="Можно прям в красках, не стесняясь в
                 выражениях"></textarea>
             </fieldset>
-            <button class="form__submit" type="submit">Отправить форму</button>
+            <button class="form__submit button" type="submit">Отправить форму</button>
             <small><sup>*</sup>ー Обязательные поля</small>
           </form>
       </section>
@@ -186,13 +186,13 @@
         <h3 class="check__title">Что-то пошло не так!</h3>
           <p class="check__description">Проверьте поля, выделенные красным,
             скорее всего вы забыли их заполнить</p>
-            <button class="check__button" type="button">Ок</button>
+            <button class="check__button button" type="button">Ок</button>
       </article>
       <article class="modal__item send">
         <h3 class="send__title">Ваша заявка отправлена</h3>
           <p class="send__description">Спасибо за ваше участие, ваша заявка уже
             поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
-            <button class="send__button" type="button">Закрыть окно</button>
+            <button class="send__button button" type="button">Закрыть окно</button>
       </article>
     </section>
   </body>
