--- a/source/form.html
+++ b/source/form.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image"
-        src="img/logotype-white-mobile.svg"
+        src="img/logo-pink-white-mobile.svg"
         width="75" height="22" alt="Пинк">
       </a>
       <button class="page-header__toggle" type="button">
@@ -32,15 +33,14 @@
       </nav>
       <h1 class="page-header__title">Конкурс на самое безбашенное путешествие
         с Пинк</h1>
+      <section class="form-contest">
+        <p class="form-contest__description">Поделитесь своей историей и
+          получите шанс выиграть ценный приз — 1000 миль на вашу бонусную
+          карту! Пожалуйста, заполните форму ниже:</p>
+      </section>
     </header>
 
     <main class="page-form">
-      <section class="form-contest">
-          <p class="form-contest__description">Поделитесь своей историей и
-            получите шанс выиграть ценный приз — 1000 миль на вашу бонусную
-            карту! Пожалуйста, заполните форму ниже:</p>
-      </section>
-
       <section class="form-section">
         <h2 class="visually-hidden">Форма для заполнения</h2>
         <form class="form-section__form form" action="https://echo.htmlacademy.ru"
@@ -146,26 +146,26 @@
 
     <footer class="page-footer">
       <a class="page-footer__logo" href="#">
-        <img class="page-footer__logo-image" src="img/logotype-blue-tablet.svg"
+        <img class="page-footer__logo-image" src="img/logo-pink-blue-mobile.svg"
         width="147" height="40" alt="Логотип приложения Pink">
       </a>
 
       <ul class="page-footer__list social-list">
         <li class="social-list__item">
           <a class="social-list__link" href="#">
-            <img class="social-list__img" src="img/twitter.svg" width="18"
+            <img class="social-list__img" src="img/icon-twitter.svg" width="18"
             height="14" alt="Twitter">
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
-            <img class="social-list__img" src="img/facebook.svg" width="9"
+            <img class="social-list__img" src="img/icon-facebook.svg" width="9"
             height="18" alt="Facebook">
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
-            <img class="social-list__img" src="img/youtube.svg" width="15"
+            <img class="social-list__img" src="img/icon-youtube.svg" width="15"
             height="13" alt="YouTube">
           </a>
         </li>
@@ -174,7 +174,7 @@
       <div class="page-footer__unit unit-copyright">
         <p class="unit-copyright__title">Разработано</p>
         <a class="unit-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="unit-copyright__img" src="img/htmlacademy.svg" width="27"
+          <img class="unit-copyright__img" src="img/logo-htmlacademy.svg" width="27"
           height="34" alt="HtmlAcademy">
         </a>
       </div>
