--- a/source/photo.html
+++ b/source/photo.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image"
-        src="img/logotype-white-mobile.svg"
+        src="img/logo-pink-white-mobile.svg"
         width="75" height="22" alt="Пинк">
       </a>
       <button class="page-header__toggle" type="button">
@@ -31,19 +32,18 @@
         </ul>
       </nav>
       <h1 class="page-header__title">Фотографии пользователей</h1>
-    </header>
-
-    <main class="page-photo">
       <section class="photo-users">
         <p class="photo-users__description">Взгляните на фотографии, которые
           выкладывают пользователи! Видите, как не хватает ваших?</p>
       </section>
+    </header>
 
+    <main class="page-photo">
       <section class="gallery">
         <h2 class="visually-hidden">Фотографии и комментарии</h2>
         <article class="gallery__item user-post">
           <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/panorama-mobile.jpg" width="320"
+            <img class="gallery__top-img" src="img/panorama-mobile@1x.jpg" width="320"
             height="137" alt="Фото Анны">
           </a>
           <p class="gallery__title">Панорама дня</p>
@@ -59,7 +59,7 @@
         </article>
         <article class="gallery__item user-post">
           <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-1-mobile.jpg" width="280"
+            <img class="gallery__top-img" src="img/photo-car-mobile@1x.jpg" width="280"
             height="180" alt="Фото Левона">
           </a>
           <p class="gallery__author">Левон
@@ -73,7 +73,7 @@
         </article>
         <article class="gallery__item user-post">
           <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-2-mobile.jpg" width="280"
+            <img class="gallery__top-img" src="img/photo-drumset-mobile@1x.jpg" width="280"
             height="180" alt="Фото Антона">
           </a>
           <p class="gallery__author">Антон
@@ -86,7 +86,7 @@
         </article>
         <article class="gallery__item user-post">
           <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-3-mobile.jpg" width="280"
+            <img class="gallery__top-img" src="img/photo-window-mobile@1x.jpg" width="280"
             height="180" alt="Фото Бориса">
           </a>
           <p class="gallery__author">Борис
@@ -100,7 +100,7 @@
         </article>
         <article class="gallery__item user-post">
           <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-4-mobile.jpg" width="280"
+            <img class="gallery__top-img" src="img/photo-fair-mobile@1x.jpg" width="280"
             height="180" alt="Фото Сергея">
           </a>
           <p class="gallery__author">Сергей
@@ -113,7 +113,7 @@
         </article>
         <article class="gallery__item user-post">
           <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-5-mobile.jpg" width="280"
+            <img class="gallery__top-img" src="img/photo-pov-mobile@1x.jpg" width="280"
             height="180" alt="Фото Максима">
           </a>
           <p class="gallery__author">Максим
@@ -126,7 +126,7 @@
         </article>
         <article class="gallery__item user-post">
           <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-6-mobile.jpg" width="280"
+            <img class="gallery__top-img" src="img/photo-wing-mobile@1x.jpg" width="280"
             height="180" alt="Фото Надежды">
           </a>
           <p class="gallery__author">Надежда
@@ -145,7 +145,7 @@
             накопилось в телефоне!</p>
         <form class="locate__form form-tuning" action="https://echo.htmlacademy.ru"
         method="get">
-          <img class="form-tuning__img" src="img/photo-7-mobile.jpg" width="280"
+          <img class="form-tuning__img" src="img/photo-road-mobile@1x.jpg" width="280"
           height="374" alt="Фото с телефона">
           <ul class="form-tuning__list">
             <li class="form-tuning__item">
@@ -179,26 +179,26 @@
 
     <footer class="page-footer">
       <a class="page-footer__logo" href="#">
-        <img class="page-footer__logo-image" src="img/logotype-blue-tablet.svg"
+        <img class="page-footer__logo-image" src="img/logo-pink-blue-mobile.svg"
         width="147" height="40" alt="Логотип приложения Pink">
       </a>
 
       <ul class="page-footer__list social-list">
         <li class="social-list__item">
           <a class="social-list__link" href="#">
-            <img class="social-list__img" src="img/twitter.svg" width="18"
+            <img class="social-list__img" src="img/icon-twitter.svg" width="18"
             height="14" alt="Twitter">
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
-            <img class="social-list__img" src="img/facebook.svg" width="9"
+            <img class="social-list__img" src="img/icon-facebook.svg" width="9"
             height="18" alt="Facebook">
           </a>
         </li>
         <li class="social-list__item">
           <a class="social-list__link" href="#">
-            <img class="social-list__img" src="img/youtube.svg" width="15"
+            <img class="social-list__img" src="img/icon-youtube.svg" width="15"
             height="13" alt="YouTube">
           </a>
         </li>
@@ -207,7 +207,7 @@
       <div class="page-footer__unit unit-copyright">
         <p class="unit-copyright__title">Разработано</p>
         <a class="unit-copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <img class="unit-copyright__img" src="img/htmlacademy.svg" width="27"
+          <img class="unit-copyright__img" src="img/logo-htmlacademy.svg" width="27"
           height="34" alt="HtmlAcademy">
         </a>
       </div>
