Размеры текста и фон

--- a/source/form.html
+++ b/source/form.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <h1 class="page-header__title">Конкурс на самое безбашенное путешествие
+      <h1 class="page-header__form">Конкурс на самое безбашенное путешествие
         с Пинк</h1>
       <section class="form-contest">
         <p class="form-contest__description">Поделитесь своей историей и
@@ -139,7 +139,7 @@
                 выражениях"></textarea>
             </fieldset>
             <button class="form__submit button" type="submit">Отправить форму</button>
-            <small><sup>*</sup>ー Обязательные поля</small>
+            <small class="form__remark"><sup>*</sup>ー Обязательные поля</small>
           </form>
       </section>
     </main>
