--- a/source/index.html
+++ b/source/index.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <h1 class="page-header__title">Взгляните на жизнь иначе!</h1>
+      <h1 class="page-header__index">Взгляните на жизнь иначе!</h1>
 
       <section class="download-app">
         <a class="download-app__button button" href="#">Скачать приложение</a>
@@ -88,14 +88,14 @@
       </section>
 
       <section class="reviews">
-        <div class="reviews__wrapper slider"
+        <div class="reviews__wrapper slider">
           <h2 class="visually-hidden">Отзывы о приложении</h2>
           <blockquote class="reviews__item slider__item">
             <cite class="reviews__author">Николай Петров</cite>
             <p class="reviews__description">«Это приложение перевернуло мой мир
             и позволило по-новому взглянуть на привычные серые вещи! А
             еще я познакомился со своей будущей женой в комментариях к
-            выложенной фотографии!»
+            выложенной фотографии!»</p>
           </blockquote>
           <blockquote class="reviews__item slider__item">
             <cite class="reviews__author"></cite>
@@ -113,61 +113,61 @@
         </div>
       </section>
 
-      <section class="price">
-        <table class="price__list slider">
+      <section class="price-slider">
+        <table class="price-slider__list">
           <caption class="visually-hidden">Наши тарифы</caption>
           <tr>
-            <th class="slider__item slider__item--basa">
-              <img class="icon-hit" src="http://placehold.it/150x100"
-              width="" height="">База<span>1,99 usd</span>
+            <th class="price-slider__head price-slider__head--base">
+              <img class="price-slider__hit" src="img/hit.png"
+              width="74" height="73">База<span>1,99 usd</span>
             </th>
-            <th class="slider__item slider__item--standart">
-              <img class="icon-hit icon-hit--active" src="http://placehold.it/150x100"
-              width="" height="">Стандарт<span>3,99 usd</span>
+            <th class="price-slider__head price-slider__head--standart">
+              <img class="price-slider__hit price-slider__head--active" src="img/hit.png"
+              width="74" height="73">Стандарт<span>3,99 usd</span>
             </th>
-            <th class="slider__item slider__item--unlim">
-              <img class="icon-hit" src="http://placehold.it/150x100"
-              width="" height="">Анлим<span>9,99 usd</span>
+            <th class="price-slider__head price-slider__head--unlim">
+              <img class="price-slider__hit" src="img/hit.png"
+              width="74" height="73">Анлим<span>9,99 usd</span>
             </th>
           </tr>
           <tr>
-            <td class="price__item price__item--yes">
+            <td class="price-slider__item price-slider__item--yes">
               Розовый фильтр
             </td>
-            <td class="price__item price__item--yes">
+            <td class="price-slider__item price-slider__item--yes">
               Розовый фильтр
             </td>
-            <td class="price__item price__item--yes">
+            <td class="price-slider__item price-slider__item--yes">
               Розовый фильтр
             </td>
           </tr>
           <tr>
-            <td class="price__item price__item--no">
+            <td class="price-slider__item price-slider__item--no">
               Смайлики
             </td>
-            <td class="price__item price__item--yes">
+            <td class="price-slider__item price-slider__item--yes">
               Смайлики
             </td>
-            <td class="price__item price__item--yes">
+            <td class="price-slider__item price-slider__item--yes">
               Смайлики
             </td>
           </tr>
           <tr>
-            <td class="price__item price__item--no">
+            <td class="price-slider__item price-slider__item--no">
               Комментарии
             </td>
-            <td class="price__item price__item--no">
+            <td class="price-slider__item price-slider__item--no">
               Комментарии
             </td>
-            <td class="price__item price__item--yes">
+            <td class="price-slider__item price-slider__item--yes">
               Комментарии
             </td>
           </tr>
         </table>
-        <p class="price__toggles slider__toggles">
-          <button class="slider__toggle" type="button">1</button>
-          <button class="slider__toggle" type="button">2</button>
-          <button class="slider__toggle" type="button">3</button>
+        <p class="price-slider__toggles-">
+          <button class="price-slider__toggle" type="button">1</button>
+          <button class="price-slider__toggle" type="button">2</button>
+          <button class="price-slider__toggle" type="button">3</button>
         </p>
       </section>
 
