--- a/source/photo.html
+++ b/source/photo.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <h1 class="page-header__title">Фотографии пользователей</h1>
+      <h1 class="page-header__photo">Фотографии пользователей</h1>
       <section class="photo-users">
         <p class="photo-users__description">Взгляните на фотографии, которые
           выкладывают пользователи! Видите, как не хватает ваших?</p>
@@ -150,19 +150,19 @@
           <ul class="form-tuning__list">
             <li class="form-tuning__item">
               <label class="form-tuning__label"><img class="form-tuning__icon"
-                width="44" height="44" src="img/crop.svg">
+                width="44" height="44" src="img/icon-editor-crop.svg">
                 <input type="checkbox" id="crop" checked>
               </label>
             </li>
             <li class="form-tuning__item">
               <label class="form-tuning__label"><img class="form-tuning__icon"
-                width="48" height="43" src="img/fill.svg">
+                width="48" height="43" src="img/icon-editor-fill.svg">
                 <input type="checkbox" id="crop">
               </label>
             </li>
             <li class="form-tuning__item">
               <label class="form-tuning__label"><img class="form-tuning__icon"
-                width="32" height="32" src="img/contrast.svg">
+                width="32" height="32" src="img/icon-editor-contrast.svg">
                 <input type="checkbox" id="contrast">
               </label>
             </li>
