--- a/source/index.html
+++ b/source/index.html
@@ -87,30 +87,28 @@
         width="157" height="320" alt="iPhone screen">
       </section>
 
-      <section class="reviews">
-        <div class="reviews__wrapper slider">
-          <h2 class="visually-hidden">Отзывы о приложении</h2>
-          <blockquote class="reviews__item slider__item">
-            <cite class="reviews__author">Николай Петров</cite>
-            <p class="reviews__description">«Это приложение перевернуло мой мир
-            и позволило по-новому взглянуть на привычные серые вещи! А
-            еще я познакомился со своей будущей женой в комментариях к
-            выложенной фотографии!»</p>
-          </blockquote>
-          <blockquote class="reviews__item slider__item">
-            <cite class="reviews__author"></cite>
-            <p class="reviews__description"></p>
-          </blockquote>
-          <blockquote class="reviews__item slider__item">
-            <cite class="reviews__author"></cite>
-            <p class="reviews__description"></p>
-          </blockquote>
-          <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle" type="button">1</button>
-            <button class="slider__toggle" type="button">2</button>
-            <button class="slider__toggle" type="button">3</button>
-          </p>
-        </div>
+      <section class="reviews-slider">
+        <h2 class="visually-hidden">Отзывы о приложении</h2>
+        <blockquote class="reviews-slider__item">
+          <cite class="reviews-slider__author">Николай Петров</cite>
+          <p class="reviews-slider__description">«Это приложение перевернуло мой мир
+          и позволило по-новому взглянуть на привычные серые вещи! А
+          еще я познакомился со своей будущей женой в комментариях к
+          выложенной фотографии!»</p>
+        </blockquote>
+        <blockquote class="reviews-slider__item">
+          <cite class="reviews-slider__author"></cite>
+          <p class="reviews-slider__description"></p>
+        </blockquote>
+        <blockquote class="reviews-slider__item">
+          <cite class="reviews-slider__author"></cite>
+          <p class="reviews-slider__description"></p>
+        </blockquote>
+        <p class="reviews-slider__toggles">
+          <button class="reviews-slider__toggle" type="button">1</button>
+          <button class="reviews-slider-slider__toggle" type="button">2</button>
+          <button class="reviews-slider__toggle" type="button">3</button>
+        </p>
       </section>
 
       <section class="price-slider">
@@ -164,7 +162,7 @@
             </td>
           </tr>
         </table>
-        <p class="price-slider__toggles-">
+        <p class="price-slider__toggles">
           <button class="price-slider__toggle" type="button">1</button>
           <button class="price-slider__toggle" type="button">2</button>
           <button class="price-slider__toggle" type="button">3</button>
