--- a/source/photo.html
+++ b/source/photo.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -42,99 +43,99 @@
       <section class="gallery">
         <h2 class="visually-hidden">Фотографии и комментарии</h2>
         <article class="gallery__item user-post">
-          <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/panorama-mobile@1x.jpg" width="320"
+          <a class="user-post__link" href="#">
+            <img class="user-post__top-img" src="img/panorama-mobile@1x.jpg" width="320"
             height="137" alt="Фото Анны">
           </a>
-          <p class="gallery__title">Панорама дня</p>
-          <p class="gallery__author">Анна
-            <span class="gallery__time">(5 минут назад)</span>
+          <p class="user-post__title">Панорама дня</p>
+          <p class="user-post__author">Анна
+            <span class="user-post__time">(5 минут назад)</span>
           </p>
-          <p class="gallery__content">Прыгать или нет? Напишите в комментарии
+          <p class="user-post__content">Прыгать или нет? Напишите в комментарии
             свой совет и смотрите прямую трансляцию в перископе, задавайте
             свои вопросы!</p>
-          <p class="gallery__likes"><i class="icon-heart"></i>Нравится:
-            <span class="gallery__likes-number">215</span>
+          <p class="user-post__likes"><i class="user-post__heart"></i>Нравится:
+            <span class="user-post__likes-number">215</span>
           </p>
         </article>
         <article class="gallery__item user-post">
-          <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-car-mobile@1x.jpg" width="280"
+          <a class="user-post__link" href="#">
+            <img class="user-post__top-img" src="img/photo-car-mobile@1x.jpg" width="280"
             height="180" alt="Фото Левона">
           </a>
-          <p class="gallery__author">Левон
-            <span class="gallery__time">(5 часов назад)</span>
+          <p class="user-post__author">Левон
+            <span class="user-post__time">(5 часов назад)</span>
           </p>
-          <p class="gallery__content">Вчера он на луну летал, сегодня в руки
+          <p class="user-post__content">Вчера он на луну летал, сегодня в руки
             к нам попал.</p>
-          <p class="gallery__likes"><i class="icon-heart"></i>Нравится:
-            <span class="gallery__likes-number">356</span>
+          <p class="user-post__likes"><i class="user-post__heart"></i>Нравится:
+            <span class="user-post__likes-number">356</span>
           </p>
         </article>
         <article class="gallery__item user-post">
-          <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-drumset-mobile@1x.jpg" width="280"
+          <a class="user-post__link" href="#">
+            <img class="user-post__top-img" src="img/photo-drumset-mobile@1x.jpg" width="280"
             height="180" alt="Фото Антона">
           </a>
-          <p class="gallery__author">Антон
-            <span class="gallery__time">(12 часов назад)</span>
+          <p class="user-post__author">Антон
+            <span class="user-post__time">(12 часов назад)</span>
           </p>
-          <p class="gallery__content">Соседи будут рады!</p>
-          <p class="gallery__likes"><i class="icon-heart"></i>Нравится:
-            <span class="gallery__likes-number">666</span>
+          <p class="user-post__content">Соседи будут рады!</p>
+          <p class="user-post__likes"><i class="user-post__heart"></i>Нравится:
+            <span class="user-post__likes-number">666</span>
           </p>
         </article>
         <article class="gallery__item user-post">
-          <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-window-mobile@1x.jpg" width="280"
+          <a class="user-post__link" href="#">
+            <img class="user-post__top-img" src="img/photo-window-mobile@1x.jpg" width="280"
             height="180" alt="Фото Бориса">
           </a>
-          <p class="gallery__author">Борис
-            <span class="gallery__time">(20 часов назад)</span>
+          <p class="user-post_author">Борис
+            <span class="user-post__time">(20 часов назад)</span>
           </p>
-          <p class="gallery__content">Здесь могла быть ваша цитата о высоком
+          <p class="user-post__content">Здесь могла быть ваша цитата о высоком
             и вечном.</p>
-          <p class="gallery__likes"><i class="icon-heart"></i>Нравится:
-            <span class="gallery__likes-number">215</span>
+          <p class="user-post__likes"><i class="user-post__heart"></i>Нравится:
+            <span class="user-post__likes-number">215</span>
           </p>
         </article>
         <article class="gallery__item user-post">
-          <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-fair-mobile@1x.jpg" width="280"
+          <a class="user-post__link" href="#">
+            <img class="user-post__top-img" src="img/photo-fair-mobile@1x.jpg" width="280"
             height="180" alt="Фото Сергея">
           </a>
-          <p class="gallery__author">Сергей
-            <span class="gallery__time">(25 часов назад)</span>
+          <p class="user-post__author">Сергей
+            <span class="user-post__time">(25 часов назад)</span>
           </p>
-          <p class="gallery__content">Самая кубанская в мире!</p>
-          <p class="gallery__likes"><i class="icon-heart"></i>Нравится:
-            <span class="gallery__likes-number">4</span>
+          <p class="user-post__content">Самая кубанская в мире!</p>
+          <p class="user-post__likes"><i class="user-post__heart"></i>Нравится:
+            <span class="user-post__likes-number">4</span>
           </p>
         </article>
         <article class="gallery__item user-post">
-          <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-pov-mobile@1x.jpg" width="280"
+          <a class="user-post__link" href="#">
+            <img class="user-post__top-img" src="img/photo-pov-mobile@1x.jpg" width="280"
             height="180" alt="Фото Максима">
           </a>
-          <p class="gallery__author">Максим
-            <span class="gallery__time">(40 часов назад)</span>
+          <p class="user-post__author">Максим
+            <span class="user-post__time">(40 часов назад)</span>
           </p>
-          <p class="gallery__content">Где снег-то?</p>
-          <p class="gallery__likes"><i class="icon-heart"></i>Нравится:
-            <span class="gallery__likes-number">150</span>
+          <p class="user-post__content">Где снег-то?</p>
+          <p class="user-post__likes"><i class="user-post__heart"></i>Нравится:
+            <span class="user-post__likes-number">150</span>
           </p>
         </article>
         <article class="gallery__item user-post">
-          <a class="gallery__link" href="#">
-            <img class="gallery__top-img" src="img/photo-wing-mobile@1x.jpg" width="280"
+          <a class="user-post__link" href="#">
+            <img class="user-post__top-img" src="img/photo-wing-mobile@1x.jpg" width="280"
             height="180" alt="Фото Надежды">
           </a>
-          <p class="gallery__author">Надежда
-            <span class="gallery__time">(45 часов назад)</span>
+          <p class="user-post__author">Надежда
+            <span class="user-post__time">(45 часов назад)</span>
           </p>
-          <p class="gallery__content">Всем GM и взаимные лайки!</p>
-          <p class="gallery__likes"><i class="icon-heart"></i>Нравится:
-            <span class="gallery__likes-number">2560</span>
+          <p class="user-post__content">Всем GM и взаимные лайки!</p>
+          <p class="user-post__likes"><i class="user-post__heart"></i>Нравится:
+            <span class="user-post__likes-number">2560</span>
           </p>
         </article>
       </section>
@@ -171,8 +172,8 @@
             <div class="form-tuning__line">
             <div class="form-tuning__point">
           </div>
-          <button class="form-tuning__button" type="submit">Запостить</button>
-          <button class="form-tuning__button" type="button">Отмена</button>
+          <button class="form-tuning__post" type="submit">Запостить</button>
+          <button class="form-tuning__cancel" type="button">Отмена</button>
         </form>
       </section>
     </main>
