--- a/source/photo.html
+++ b/source/photo.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
@@ -172,8 +171,8 @@
             <div class="form-tuning__line">
             <div class="form-tuning__point">
           </div>
-          <button class="form-tuning__post" type="submit">Запостить</button>
-          <button class="form-tuning__cancel" type="button">Отмена</button>
+          <button class="form-tuning__btn form-tuning__btn--post" type="submit">Запостить</button>
+          <button class="form-tuning__btn form-tuning__btn--cancel" type="button">Отмена</button>
         </form>
       </section>
     </main>
