--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -110,7 +111,7 @@
                 name="phone" placeholder="Номер, пожалуйста">
               </p>
               <p class="form-contacts__item">
-                <label class="form-contactsl__label" for="email">Адрес почты</label>
+                <label class="form-contacts__label" for="email">Адрес почты</label>
                 <input class="form-contacts__text" type="text" id="email"
                 name="email" placeholder="Введите почту *" required>
               </p>
