--- a/source/photo.html
+++ b/source/photo.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
@@ -41,7 +42,7 @@
     <main class="page-photo">
       <section class="gallery">
         <h2 class="visually-hidden">Фотографии и комментарии</h2>
-        <article class="gallery__item user-post">
+        <article class="gallery__item--marked user-post">
           <a class="user-post__link" href="#">
             <img class="user-post__top-img" src="img/panorama-mobile@1x.jpg" width="320"
             height="137" alt="Фото Анны">
