--- a/source/index.html
+++ b/source/index.html
@@ -2,19 +2,22 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>HTML Academy: Пинк</title>
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image"
-        src="img/logo-pink-white-mobile.svg"
-        width="75" height="22" alt="Пинк">
-      </a>
-      <button class="page-header__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
+      <div class="page-header__menu">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image"
+          src="img/logo-pink-white-mobile.svg"
+          width="75" height="22" alt="Пинк">
+        </a>
+        <button class="page-header__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+      </div>
       <nav class="main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
@@ -31,9 +34,9 @@
           </li>
         </ul>
       </nav>
-      <h1 class="page-header__index">Взгляните на жизнь иначе!</h1>
 
       <section class="download-app">
+        <h1 class="download-app__title">Взгляните на жизнь иначе!</h1>
         <a class="download-app__button button" href="#">Скачать приложение</a>
         <ul class="download-app__list os-list">
           <li class="os-list__item os-list__item--apple">
@@ -64,33 +67,40 @@
       <section class="advantages">
         <h2 class="visually-hidden">Наши преимущества</h2>
         <p class="advantages__title">Устали от серости мегаполиса?</p>
-        <p class="advantages__title">Нам есть, что вам предложить!</p>
+        <p class="advantages__title advantages__title--two">Нам есть, что вам предложить!</p>
         <ul class="advantages__list advantage">
-          <li class="advantage__item">
+          <li class="advantage__item advantage__item--grey">
             <h3 class="advantage__title">Поднимает настроение</h3>
             <p class="advantage__description">Приложение позволит вам
             победить осеннюю хандру и депрессию буквально в
             несколько кликов!</p>
           </li>
-          <li class="advantage__item">
+          <li class="advantage__item advantage__item--pink">
             <h3 class="advantage__title">Меняет мир вокруг</h3>
             <p class="advantage__description">Сделайте снимок и украсьте
             его смайликом или текстовой подписью, чтобы усилить эффект</p>
           </li>
-          <li class="advantage__item">
+          <li class="advantage__item advantage__item--smile">
             <h3 class="advantage__title">Заводит новых друзей</h3>
             <p class="advantage__description">Ставьте лайки, комментируйте,
             делитесь фотографиями с друзьями и заводите новых</p>
           </li>
         </ul>
-        <img class="advantages__img" src="img/iphone-screen-mobile@1x.png"
-        width="157" height="320" alt="iPhone screen">
+      </section>
+
+      <section class="research">
+        <h3 class="research__title">Эффект на 24 часа</h3>
+        <p class="research__description">Британские ученые провели исследования и
+          доказали, что положительный эффект от использования приложения
+          длится целые сутки!</p>
+        <a class="research__link" href="#">Узнать больше об исследовании</a>
       </section>
 
       <section class="reviews-slider">
         <h2 class="visually-hidden">Отзывы о приложении</h2>
         <blockquote class="reviews-slider__item">
           <cite class="reviews-slider__author">Николай Петров</cite>
+          <p class="reviews-slider__details">25 лет, водитель трамвая</p>
           <p class="reviews-slider__description">«Это приложение перевернуло мой мир
           и позволило по-новому взглянуть на привычные серые вещи! А
           еще я познакомился со своей будущей женой в комментариях к
@@ -98,10 +108,12 @@
         </blockquote>
         <blockquote class="reviews-slider__item">
           <cite class="reviews-slider__author"></cite>
+          <p class="reviews-slider__details"></p>
           <p class="reviews-slider__description"></p>
         </blockquote>
         <blockquote class="reviews-slider__item">
           <cite class="reviews-slider__author"></cite>
+          <p class="reviews-slider__details"></p>
           <p class="reviews-slider__description"></p>
         </blockquote>
         <p class="reviews-slider__toggles">
@@ -173,24 +185,26 @@
         <h2 class="visually-hidden">Наши контакты</h2>
         <p class="information__title">Остались вопросы? Свяжитесь с нами</p>
         <ul class="information__list contacts">
-          <li class="contacts__item">
+          <li class="contacts__item contacts__item--tel">
             <h3 class="contacts__title">Звоните:</h3>
             <a class="contacts__info" href="tel:+7 (812) 555-66-66">
               +7 (812) 555-66-66
             </a>
           </li>
-          <li class="contacts__item">
+          <li class="contacts__item contacts__item--mail">
             <h3 class="contacts__title">Пишите:</h3>
             <a class="contacts__info" href="mailto:mail@htmlacademy.ru">
               mail@htmlacademy.ru
             </a>
           </li>
-          <li class="contacts__item">
+          <li class="contacts__item contacts__item--adress">
             <h3 class="contacts__title">Приезжайте в гости</h3>
             <p class="contacts__info">ул. Большая Конюшенная, 19/8</p>
           </li>
         </ul>
-        <div class="contacts__map"></div>
+        <div class="contacts__map">
+          <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1998.6076806170067!2d30.320580416097012!3d59.93865188187615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z0YPQuy4g0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8sIDE5Lzg!5e0!3m2!1sru!2sru!4v1516391833762" allowfullscreen></iframe>
+        </div>
       </section>
     </main>
 
